--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "server": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -31,8 +30,6 @@
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "jest": "^24.8.0",
-    "live-server": "^1.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
@@ -49,8 +46,10 @@
     "uuid": "^3.3.2",
     "validator": "^10.11.0",
     "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1"
+    "webpack-cli": "^3.3.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "jest": "^24.8.0",
+    "webpack-dev-server": "^3.3.1"
+  }
 }
